...
            TextField(
                modifier = Modifier.fillMaxWidth(),
                value = text,
                onValueChange = { onTextChange(it) },
                placeholder = {
                    Text(
                        text = "Search here...",
                        modifier = Modifier.alpha(0.6f),
                        color = topAppBarContentColor
                    )
                },
                colors = TextFieldDefaults.colors(
                    focusedTextColor = topAppBarContentColor,
...
