package com.multiplatform.todoappkmp.util

object Constants {
    const val DEFAULT_TITLE = "Enter the Title"
    const val DEFAULT_DESCRIPTION = "Add some description"
}

object TestTag {
    const val TEST_TITLE = "TestTitle"
    const val TEST_TITLE2 = "TestTitle2"
    const val ACTIVE_TASK_ICON = "ActiveTaskIcon"
    const val COMPLETED_TASK_ICON = "CompletedTaskIcon"
    const val ACTIVE_ERROR_TEXT = "ActiveErrorText"
    const val COMPLETED_ERROR_TEXT = "CompletedErrorText"
    const val ACTIVE_LOADING_INDICATOR = "ActiveLoadingIndicator"
    const val COMPLETED_LOADING_INDICATOR = "CompletedLoadingIndicator"
    const val CHECKBOX = "Checkbox"
    const val HOME_SCREEN = "HomeScreen"
    const val TASK_SCREEN = "TaskScreen"
    const val HOME_FAB = "HomeFab"
    const val TASK_FAB = "TaskFab"
    const val TITLE_TEXT_FIELD = "TitleTextField"
    const val DESC_TEXT_FIELD = "DescTextField"
    const val TASK_SCREEN_BACK_ARROW = "TaskScreenBackArrow"
    const val TASK_VIEW = "TaskView"
    const val ALERT_POSITIVE_BUTTON = "AlertPositiveButton"
    const val ALERT_NEGATIVE_BUTTON = "AlertNegativeButton"
    const val LAZY_COLUMN = "LazyColumn"
}
